Changes made according to PR#2